added some styles

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
              <div class="botique-designer-container">
                  <div class="botique-designer-container-textsection">
                    <h2 class="botique-designer-header">Are you a Boutique Designer?</h2>
-                   <p class="botique-designer-pbtag">Sell your creations far and wide. OR Accept appointments from new people around you.</p>
+                   <p class="botique-designer-pbtag">Sell your creations far and wide. <br><strong>OR </strong><br>Accept appointments from new people around you.</p>
                    <!-- <p class="botique-designer-pstag">Register today to get 6 months for free services from Dzor</p>  -->
                    <a href="#" class="register-here-button">Register here</a>
                  </div>
@@ -80,25 +80,25 @@
         <!-- section first start -->
         <div class="selling">
            <div class="selling-container">
-              <h2>All you need to partner with Dzor is</h2>
+              <h2>All you need to partner with Dzor is...</h2>
               <div class="selling-container-images">
                   <div class="selling-container-images-section">
-                     <img src="images/file-invoice-solid.svg" alt="file-invoice-solid">
+                     <img src="images/accounting.svg" alt="file-invoice-solid">
                      <span>Bank Account</span>
                   </div>
                   <div class="selling-container-images-section original-creation">
-                    <img src="images/creative-commons-share-brands.svg" alt="creative-commons-share-brands">
+                    <img src="images/dress.svg" alt="creative-commons-share-brands">
                     <span>Your Original Creations</span>
                   </div>
                   <div class="selling-container-images-section great-pictures">
-                    <img src="images/image-regular.svg" alt="image-regular">
+                    <img src="images/camera.svg" alt="image-regular">
                     <span>Great Pictures</span>
                   </div>
               </div>
-              <p>Start Selling in 5 mins.</p>
+              <p>Start Selling in Minutes.</p>
            </div>
            <div class="selling-register-button">
-           <a href="#" class="register-here-button">Register here</a>
+           <a href="#" class="register-here-button">Get Started</a>
            </div>
         </div>
 
@@ -109,23 +109,23 @@
                 <div class="second-section-container">
                   <div class="second-section-container-box">
                     <div class="second-section-container-box-image-section">
-                      <img src="images/1.jpg" class="d-block w-50 h-25 mx-auto" alt="brand1">
+                      <img src="images/delivery2.png" class="d-block w-75 h-75 mx-auto" alt="brand1">
                     </div>
                     <div class="second-section-container-box-text-section">
                        <p>We take care of your deliveries.</p>
                     </div>
                   </div>
                   <div class="second-section-container-box">
-                    <div class="second-section-container-box-image-section">
-                      <img src="images/2.jpg" class="d-block w-50 h-25 mx-auto" alt="brand1">
+                    <div class="second-section-container-box-image-section w-75 h-75">
+                      <img src="images/original-designs.png" class="d-block w-75 h-75 mx-auto" alt="brand1">
                     </div>
                     <div class="second-section-container-box-text-section">
-                     <p>Sell to clients across India!</p>
+                     <p>Sell to customer across India!</p>
                     </div>
                   </div>
                   <div class="second-section-container-box">
                     <div class="second-section-container-box-image-section">
-                      <img src="images/3.jpg" class="d-block w-50 h-25 mx-auto" alt="brand1">
+                      <img src="images/your-designs.png" class="d-block w-75 h-75 mx-auto" alt="brand1">
                     </div>
                     <div class="second-section-container-box-text-section">
                      <p>Accept appointments for customisations requests.</p>
@@ -133,7 +133,7 @@
                   </div>
                    
                 </div>
-                <a href="#" class="register-here-button">Register here</a>
+                <a href="#" class="register-here-button">Let's Go!</a>
             </div>
 
          <!-- section second end -->
@@ -141,24 +141,33 @@
 
         <!-- pricing section start -->
            <div class="people-pricing-section">
+           <h1>Choose the best option for you</h1>
              <div class="people-pricing-section-container">
                 <div class="people-pricing-section-container-detail">
                    <div class="people-pricing-section-container-detail-box border-start-0"></div>
                    <div class="people-pricing-section-container-detail-box ">
                      <h1 class="detail-box-header">Seller</h1>
                      <p>Let your creations reach far and wide.</p>
+                     <a href="#" class="select-plan">Select Plan</a>
+                     <img src="images/trade.svg" alt="trade">
                    </div>
                    <div class="people-pricing-section-container-detail-box">
                      <h1 class="detail-box-header">Promoter</h1>
                      <p>Grow your brand to new levels.</p>
+                     <a href="#" class="select-plan">Select Plan</a>
+                     <img src="images/shop.svg" alt="shop">
                    </div>
                    <div class="people-pricing-section-container-detail-box">
                      <h1 class="detail-box-header">Seller Pro</h1>
                      <p>The Full Package.</p>
+                     <a href="#" class="select-plan">Select Plan</a>
+                     <img src="images/seller.svg" alt="Seller">
                    </div>
                 </div>
                 <div class="people-pricing-section-container-feature">
+                <div class="people-pricing-section-container-feature-header">
                   <h2>Features</h2>
+                  </div>
                 </div>
                 <div class="people-pricing-section-container-feature-detail">
                   <table style="width:100%">
@@ -274,14 +283,7 @@
   
    </div>
  
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
-    <span class="visually-hidden ">Next</span>
-  </button>
+  
 </div>
 </div>
   <!--  testimonal section end   -->
