added some styles

--- a/index.html
+++ b/index.html
@@ -106,18 +106,19 @@
 
          <!-- section second start -->
             <div class="second-section">
+             <h1 class="second-section-header">Dzor for you in a nut shell!</h1>
                 <div class="second-section-container">
                   <div class="second-section-container-box">
                     <div class="second-section-container-box-image-section">
-                      <img src="images/delivery2.png" class="d-block w-75 h-75 mx-auto" alt="brand1">
+                      <img src="images/delivery2.png" class="d-block mx-auto" alt="brand1">  
                     </div>
                     <div class="second-section-container-box-text-section">
                        <p>We take care of your deliveries.</p>
                     </div>
                   </div>
                   <div class="second-section-container-box">
-                    <div class="second-section-container-box-image-section w-75 h-75">
-                      <img src="images/original-designs.png" class="d-block w-75 h-75 mx-auto" alt="brand1">
+                    <div class="second-section-container-box-image-section">
+                      <img src="images/original-designs.png" class="d-block mx-auto" alt="brand1">
                     </div>
                     <div class="second-section-container-box-text-section">
                      <p>Sell to customer across India!</p>
@@ -125,7 +126,7 @@
                   </div>
                   <div class="second-section-container-box">
                     <div class="second-section-container-box-image-section">
-                      <img src="images/your-designs.png" class="d-block w-75 h-75 mx-auto" alt="brand1">
+                     <img src="images/your-designs.png" class="d-block mx-auto" alt="brand1">  
                     </div>
                     <div class="second-section-container-box-text-section">
                      <p>Accept appointments for customisations requests.</p>
@@ -141,7 +142,7 @@
 
         <!-- pricing section start -->
            <div class="people-pricing-section">
-           <h1>Choose the best option for you</h1>
+           <h1>Dzor for you in a nut shell!</h1>
              <div class="people-pricing-section-container">
                 <div class="people-pricing-section-container-detail">
                    <div class="people-pricing-section-container-detail-box border-start-0"></div>
@@ -161,7 +162,7 @@
                      <h1 class="detail-box-header">Seller Pro</h1>
                      <p>The Full Package.</p>
                      <a href="#" class="select-plan">Select Plan</a>
-                     <img src="images/seller.svg" alt="Seller">
+                     <img src="images/seller.svg" class="Seller-icon" alt="Seller">
                    </div>
                 </div>
                 <div class="people-pricing-section-container-feature">
@@ -174,67 +175,67 @@
                       <tr>
                         <td>Sell your creations to users across India</td>
                         <td><img src="images/check-solid.svg" style="height:25px" alt="correct-logo"></td>
-                        <td><img src="images/check-solid.svg" style="height:25px" alt="correct-logo"></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" style="height:25px" alt="correct-logo"></td>
                       </tr>
                       <tr>
                         <td>Dzor Delivery</td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
-                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                       <tr>
                         <td>Unlimited Listings</td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
-                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                        <tr>
                         <td>Give Discounts</td>
-                        <td></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                       <tr>
                         <td>Sell Western wear</td>
-                        <td></td>
-                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
-                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
                       </tr>
                        <tr>
                         <td>Launch new Collections</td>
-                        <td></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                        <tr>
                         <td>Dzor Profile</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
+                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                        <tr>
-                        <td>Locate you on Map /td>
-                        <td></td>
-                        <td></td>
+                        <td>Help Users Locate you on Maps </td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
+                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                        <tr>
                         <td>Accept Appointments</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
+                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                        <tr>
                         <td>Brand Promotion</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="images/minus-solid.svg" style="height:25px" alt="correct-logo"></td>
+                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                        <tr>
                         <td>Dzor Dashboard access</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
+                        <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                         <td><img src="images/check-solid.svg" alt="correct-logo"></td>
                       </tr>
                     </table>
@@ -261,8 +262,10 @@
          <!-- section four start  -->
 
   <!--  testimonal section start  -->
+           
         <div class="container-fluid bg-light text-center" style="color:black;padding:50px;">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <h1 class="testimonal-header">Word from our partner designers!</h1>
+        <div id="carouselExampleControls" class="carousel slide mt-5" data-bs-ride="carousel">
   <div class="carousel-inner">
   
     <div class="carousel-item active">
