added some styles

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         <!-- pricing section start -->
            <div class="people-pricing-section">
-           <h1>Dzor for you in a nut shell!</h1>
+           <h1>Choose the best option for you</h1>
              <div class="people-pricing-section-container">
                 <div class="people-pricing-section-container-detail">
                    <div class="people-pricing-section-container-detail-box border-start-0"></div>
