added some styles

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
              <div class="botique-designer-container">
                  <div class="botique-designer-container-textsection">
                    <h2 class="botique-designer-header">Are you a Boutique Designer?</h2>
-                   <p class="botique-designer-pbtag">Sell your creations far and wide. <br><strong>OR </strong><br>Accept appointments from new people around you.</p>
+                   <p class="botique-designer-pbtag">Sell your creations far and wide. <br><strong>OR </strong><br>Accept accept appointments from customers across your city.</p>
                    <!-- <p class="botique-designer-pstag">Register today to get 6 months for free services from Dzor</p>  -->
-                   <a href="#" class="register-here-button">Register here</a>
+                   <a href="#" class="register-here-button">REGISTER HERE</a>
                  </div>
                  <div class="botique-designer-container-videosection">
                    <!-- <video autoplay="" muted="" defaultmuted="" playsinline="" loop="">
