added some styles

--- a/index.html
+++ b/index.html
@@ -140,6 +140,23 @@
 
          <!-- section second end -->
 
+         <!-- new section added start-->
+              <div class="sell-your-way">
+                  <div class="sell-your-way-container">
+                  <div class="sell-your-way-container-imagesection">
+                    <img src="images/your-designs.png" alt="your-designs">
+                  </div>
+                  <div class="sell-your-way-container-textsection">
+                      <h1>Sell your way!</h1>
+                      <p>Sell few of your best creations of build your empire. Whatever suits you, we'll give you pro tips to help you get there. It's simple to sell. Let's get started!</p>
+                      <div class="sell-your-way-button">
+                        <a href="#">Let’s Get Started</a>
+                      </div>
+                      </div>
+                  </div>
+              </div>
+         <!-- new section added end-->
+
 
         <!-- pricing section start -->
            <div class="people-pricing-section">
