--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <div class="sell-your-way">
                   <div class="sell-your-way-container">
                   <div class="sell-your-way-container-imagesection">
-                    <img src="images/your-designs.png" alt="your-designs">
+                    <img src="images/sell-your-way.jpg" alt="sell-your-way">
                   </div>
                   <div class="sell-your-way-container-textsection">
                       <h1>Sell your way!</h1>
