added some styles

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   </div>
                   <div class="sell-your-way-container-textsection">
                       <h1>Sell your way!</h1>
-                      <p>Sell few of your best creations of build your empire. Whatever suits you, we'll give you pro tips to help you get there. It's simple to sell. Let's get started!</p>
+                      <p>Sell few of your best creations or build your empire. Whatever suits you, we'll give you pro tips to help you get there. It's simple to sell. Let's get started!</p>
                       <div class="sell-your-way-button">
                         <a href="#">Let’s Get Started</a>
                       </div>
